<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TransactionHistoryActivity">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/orange">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:src="@drawable/back_circle"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_history"
            android:layout_margin="10dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_alignParentBottom="true"/>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_light_background"
        android:elevation="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_ballance_600_00"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    
    <ImageView
        android:id="@+id/filterimg"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/filter"
        android:layout_gravity="end"
        android:layout_margin="10dp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:textColor="@color/orange"
            android:layout_margin="5dp"
            />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="2dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debit"
            android:layout_margin="5dp"
            />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="2dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credit"
            android:layout_margin="5dp"
            />


    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/half_round_white_bg"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="0dp"
        android:padding="10dp"
        android:elevation="10dp">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />




    </RelativeLayout>




</LinearLayout>