<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:src="@drawable/semi_icons"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true"/>


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:src="@drawable/semi_icons_2"
        android:scaleType="centerCrop"
        android:layout_alignParentBottom="true"
        tools:ignore="ContentDescription" />


    <LinearLayout
        android:id="@+id/linloginarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="@string/enter_email_or_mobile"
            android:textSize="35sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/reset_password_subtext" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/formbg"
            android:hint="@string/email_or_mobile"
            android:inputType="textEmailAddress|number"
            android:padding="20dp" />


        <TextView
            android:id="@+id/rpsendotp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="25dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btnorangebg"
            android:backgroundTint="@color/orange"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/send_otp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>



</RelativeLayout>