<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">



    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:src="@drawable/semi_icons"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true"
        tools:ignore="ContentDescription" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@drawable/semi_icons_2"
            android:scaleType="centerCrop"
            android:layout_alignParentBottom="true"
            tools:ignore="ContentDescription" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="vertical"
            android:paddingTop="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">




            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/setting_up"
                android:textSize="20sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/sign_up"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp"
                android:text="@string/_1_of_4"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="80dp"
                    android:layout_height="5dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/btnorangebg" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="80dp"
                    android:layout_height="5dp"
                    android:layout_margin="10dp"
                    android:alpha=".4"
                    android:background="@drawable/btnorangebg" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="80dp"
                    android:layout_height="5dp"
                    android:layout_margin="10dp"
                    android:alpha=".4"
                    android:background="@drawable/btnorangebg" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="80dp"
                    android:layout_height="5dp"
                    android:layout_margin="10dp"
                    android:alpha=".4"
                    android:background="@drawable/btnorangebg" />


            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="15dp"
                android:text="@string/add_your_details_to_sign_up" />


            </LinearLayout>

            <!-- Sign up form -->

            <LinearLayout
                android:id="@+id/linloginarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/formbg"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:padding="20dp"
                    android:autofillHints="" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/formbg"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:padding="20dp"
                    android:autofillHints="" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/formbg"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:padding="20dp"
                    android:autofillHints="" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/formbg"
                    android:hint="@string/mobile_number"
                    android:inputType="number"
                    android:padding="20dp"
                    android:autofillHints="" />


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/formbg"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="20dp" />


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/formbg"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:padding="20dp"
                    android:importantForAutofill="no" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="35dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/btnorangebg"
                    android:backgroundTint="@color/orange"
                    android:gravity="center"
                    android:padding="15dp"
                    android:id="@+id/signupbt"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="Already have an account? " />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="5dp"
                        android:text="Log In"
                        android:textColor="@color/orange"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

    </ScrollView>




</RelativeLayout>