<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:src="@drawable/semi_icons"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true"
        tools:ignore="ContentDescription" />


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:src="@drawable/semi_icons_2"
        android:scaleType="centerCrop"
        android:layout_alignParentBottom="true"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linloginarea"
        android:layout_marginTop="100dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:textSize="35sp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/change_password_subtext"
            android:layout_marginBottom="15dp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="10dp"
            android:padding="20dp"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:background="@drawable/formbg"
            android:importantForAutofill="no" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="10dp"
            android:padding="20dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:background="@drawable/formbg"
            android:importantForAutofill="no" />





        <TextView
            android:id="@+id/cpconfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:background="@drawable/btnorangebg"
            android:backgroundTint="@color/orange"
            android:layout_gravity="center_horizontal"
            android:text="@string/confirm"
            android:layout_marginBottom="30dp"/>


    </LinearLayout>

</RelativeLayout>