<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddWithdrawalAccActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Withdrawal Account"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:id="@+id/addwithdrwalaccounttxt"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add a withdrawal account"
            android:layout_margin="10dp"
            android:layout_below="@+id/addwithdrwalaccounttxt"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/bank_name"
        android:layout_marginStart="20dp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:entries="@array/banks"
        android:background="@drawable/half_round_black_outline"
        android:layout_margin="10dp"

        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:labelFor="@+id/accno"
        android:text="@string/account_number"
        android:layout_marginStart="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:id="@+id/accno"
        android:background="@drawable/half_round_black_outline"
        android:layout_margin="10dp"
        android:inputType="number"
        android:importantForAutofill="no" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/account_name"
        android:layout_marginStart="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@drawable/half_round_black_outline"
        android:layout_margin="10dp"

        />




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/btnorangebg"
        android:backgroundTint="@color/orange"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/continue_1"
        android:id="@+id/confirm_add_acc"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />






</LinearLayout>